<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item android:id="@+id/action_search"
          android:title="@string/action_search"
          app:showAsAction="ifRoom|collapseActionView"
          android:orderInCategory="100"
          android:icon="@drawable/ic_action_search"
          app:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/action_popular"
        android:orderInCategory="200"
        android:title="@string/action_popular"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_top_rated"
        android:orderInCategory="300"
        android:title="@string/action_top_rated"
        app:showAsAction="never"/>

</menu>