<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_margin"
            android:layout_marginRight="@dimen/item_margin"
            android:layout_marginTop="@dimen/item_margin"
            android:background="@drawable/bg_parent_rounded_corner"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/actor_photo"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"  
                android:scaleType="centerCrop"
                android:src="@drawable/no_profile"              
                android:contentDescription="@string/desc_image"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_margin"
                android:layout_marginLeft="@dimen/item_margin"
                android:layout_marginRight="@dimen/item_margin"
                android:layout_marginTop="@dimen/item_margin" >

                <LinearLayout
                    android:id="@+id/layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="@dimen/item_margin"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/actor_name"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_actor_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/nothing_found"
                        android:textColor="@android:color/black" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout_name"
                    android:layout_marginBottom="@dimen/item_margin"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/actor_birthday"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_actor_birthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/nothing_found"
                        android:textColor="@android:color/black" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_actor_birthplace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout_birthday"
                    android:layout_marginBottom="@dimen/item_margin"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/actor_birth_place"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_actor_birthplace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/nothing_found"
                        android:textColor="@android:color/black" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_margin"
            android:background="@drawable/bg_parent_rounded_corner"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/item_padding_left_right"
                android:paddingRight="@dimen/item_padding_left_right"
                android:paddingTop="@dimen/item_padding_left_right"
                android:text="@string/actor_biography" />

            <TextView
                android:id="@+id/tv_actor_biograhy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_padding_left_right"
                android:paddingLeft="@dimen/item_padding_left_right"
                android:paddingRight="@dimen/item_padding_left_right"
                android:text="@string/nothing_found"
                android:textColor="#000000"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>