<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detail_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/feed_bg"
    android:orientation="vertical" >

    <!-- Progress bar to show first -->

    <LinearLayout
        android:id="@+id/layout_pgb"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </ProgressBar>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progressbar_loading"
            android:textColor="#000000" />
    </LinearLayout>
    <!-- adaper view flipper for backdrops -->

    <AdapterViewFlipper
        android:id="@+id/backdrop_view_flipper"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:animateFirstView="false" >
    </AdapterViewFlipper>

    <ScrollView
        android:id="@+id/detail_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- layout for movie poster and detail -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/item_margin"
                android:layout_marginRight="@dimen/item_margin"
                android:layout_marginTop="@dimen/item_margin"
                android:background="@drawable/bg_parent_rounded_corner"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/movie_poster"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:src="@drawable/no_poster" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/item_margin"
                    android:layout_marginLeft="@dimen/item_margin"
                    android:layout_marginRight="@dimen/item_margin"
                    android:layout_marginTop="@dimen/item_margin"
                    android:layout_weight="1.5" >

                    <LinearLayout
                        android:id="@+id/layout_original_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginBottom="@dimen/item_margin"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/original_title"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_original_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/nothing_found"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_genres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/layout_original_title"
                        android:layout_marginBottom="@dimen/item_margin"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/genres"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_genres"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/nothing_found"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/layout_genres"
                        android:layout_marginBottom="@dimen/item_margin"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/release_date"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_release_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/nothing_found"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_runtime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/layout_release_date"
                        android:layout_marginBottom="@dimen/item_margin"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/runtime"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_runtime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/nothing_found"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/layout_runtime"
                        android:layout_marginBottom="@dimen/item_margin"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/rating"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/nothing_found"
                            android:textColor="@android:color/black" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <!-- Layout for fovorites and watch list -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/item_margin"
                android:layout_marginRight="@dimen/item_margin"
                android:layout_marginTop="@dimen/item_margin"
                android:background="@drawable/bg_parent_rounded_corner"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/checkbox_favorite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
                    android:padding="@dimen/item_padding_left_right"
                    android:text="@string/favorite"/>

                <CheckBox
                    android:id="@+id/checkbox_watchlist"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
                    android:padding="@dimen/item_padding_left_right"
                    android:text="@string/watchlist" />
            </LinearLayout>
            <!-- Layout for synopsis -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/item_margin"
                android:layout_marginRight="@dimen/item_margin"
                android:layout_marginTop="@dimen/item_margin"
                android:background="@drawable/bg_parent_rounded_corner"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/item_padding_left_right"
                    android:paddingRight="@dimen/item_padding_left_right"
                    android:paddingTop="@dimen/item_padding_left_right"
                    android:text="@string/synopsis" />

                <TextView
                    android:id="@+id/movie_synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/item_padding_left_right"
                    android:paddingLeft="@dimen/item_padding_left_right"
                    android:paddingRight="@dimen/item_padding_left_right"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Layout containing the horizontal listview for cast(actor) movies -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/item_margin"
                android:layout_marginRight="@dimen/item_margin"
                android:layout_marginTop="@dimen/item_margin"
                android:background="@drawable/bg_parent_rounded_corner"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/item_padding_left_right"
                    android:paddingRight="@dimen/item_padding_left_right"
                    android:paddingTop="@dimen/item_padding_left_right"
                    android:text="@string/cast_movies" />

                <org.lucasr.twowayview.TwoWayView
                    android:id="@+id/listview_cast_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="false"
                    android:orientation="horizontal" />
            </LinearLayout>
            <!-- Layout containing the horizontal listview for Similar movies -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/item_margin"
                android:layout_marginRight="@dimen/item_margin"
                android:layout_marginTop="@dimen/item_margin"
                android:background="@drawable/bg_parent_rounded_corner"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/item_padding_left_right"
                    android:paddingRight="@dimen/item_padding_left_right"
                    android:paddingTop="@dimen/item_padding_left_right"
                    android:text="@string/similar_movies" />

                <org.lucasr.twowayview.TwoWayView
                    android:id="@+id/listview_similar_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="false"
                    android:orientation="horizontal" />
            </LinearLayout>
            <!-- layout for trailers -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/item_margin"
                android:layout_marginRight="@dimen/item_margin"
                android:layout_marginTop="@dimen/item_margin"
                android:background="@drawable/bg_parent_rounded_corner"
                android:orientation="vertical"
                android:paddingBottom="@dimen/item_padding_top_bottom" >

                <TextView
                    android:id="@+id/tv_trailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:drawablePadding="0dp"
                    android:drawableRight="@drawable/arrow_up"
                    android:gravity="center|start"
                    android:paddingLeft="@dimen/item_padding_left_right"
                    android:paddingRight="@dimen/item_padding_left_right"
                    android:soundEffectsEnabled="true"
                    android:text="@string/trailer"
                    android:textAllCaps="true"
                    android:textColor="#448AFF"
                    android:textSize="14sp" />

                <ma.example.themoviedb1.utility.NestedListView
                    android:id="@+id/listView_trailer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@null" >
                </ma.example.themoviedb1.utility.NestedListView>
            </LinearLayout>
            <!-- layout for comments -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_margin"
                android:layout_marginLeft="@dimen/item_margin"
                android:layout_marginRight="@dimen/item_margin"
                android:layout_marginTop="@dimen/item_margin"
                android:background="@drawable/bg_parent_rounded_corner"
                android:orientation="vertical"
                android:paddingBottom="@dimen/item_padding_top_bottom" >

                <TextView
                    android:id="@+id/tv_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:drawablePadding="0dp"
                    android:drawableRight="@drawable/arrow_up"
                    android:gravity="center|start"
                    android:paddingLeft="@dimen/item_padding_left_right"
                    android:paddingRight="@dimen/item_padding_left_right"
                    android:soundEffectsEnabled="true"
                    android:text="@string/comment"
                    android:textAllCaps="true"
                    android:textColor="#448AFF"
                    android:textSize="14sp" />

                <ma.example.themoviedb1.utility.NestedListView
                    android:id="@+id/listView_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@null" >
                </ma.example.themoviedb1.utility.NestedListView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>